src/libshoopdaloop/libshoopdaloop.h

SHOOP_EXPORT void destroy_midi_channel(shoopdaloop_loop_midi_channel_t *d);
SHOOP_EXPORT void destroy_shoopdaloop_decoupled_midi_port(shoopdaloop_decoupled_midi_port_t *d);
SHOOP_EXPORT void destroy_loop_state_info(shoop_loop_state_info_t *d);
SHOOP_EXPORT void destroy_fx_chain(shoopdaloop_fx_chain_t *d);
SHOOP_EXPORT void destroy_fx_chain_state(shoop_fx_chain_state_info_t *d);
SHOOP_EXPORT void destroy_profiling_report(shoop_profiling_report_t *d);
SHOOP_EXPORT void destroy_string(const char* s);
SHOOP_EXPORT void destroy_port_connections_state(shoop_port_connections_state_t *d);
SHOOP_EXPORT void destroy_logger(shoopdaloop_logger_t *logger);
SHOOP_EXPORT void destroy_audio_driver_state(shoop_audio_driver_state_t *state);
SHOOP_EXPORT void destroy_multichannel_audio(shoop_multichannel_audio_t *audio);
SHOOP_EXPORT void destroy_external_port_descriptors(shoop_external_port_descriptors_t *desc);
// Helpers for allocating data objects
SHOOP_EXPORT shoop_midi_event_t *alloc_midi_event(unsigned data_bytes);
SHOOP_EXPORT shoop_midi_sequence_t *alloc_midi_sequence(unsigned n_events);
SHOOP_EXPORT shoop_audio_channel_data_t *alloc_audio_channel_data(unsigned n_samples);
SHOOP_EXPORT shoop_multichannel_audio_t *alloc_multichannel_audio(unsigned n_channels, unsigned n_frames);
// Logging
SHOOP_EXPORT void initialize_logging();
SHOOP_EXPORT shoopdaloop_logger_t *get_logger(const char* name);
SHOOP_EXPORT void set_global_logging_level(shoop_log_level_t level);
SHOOP_EXPORT void set_logger_level_override(shoopdaloop_logger_t *logger, shoop_log_level_t level);
SHOOP_EXPORT void reset_logger_level_override(shoopdaloop_logger_t *logger);
SHOOP_EXPORT void shoopdaloop_log(shoopdaloop_logger_t *logger, shoop_log_level_t level, const char *msg);
SHOOP_EXPORT unsigned shoopdaloop_should_log(shoopdaloop_logger_t *logger, shoop_log_level_t level);
// For testing purposes
SHOOP_EXPORT void dummy_audio_port_queue_data(shoopdaloop_audio_port_t *port, unsigned n_frames, audio_sample_t const* data);
SHOOP_EXPORT void dummy_audio_port_dequeue_data(shoopdaloop_audio_port_t *port, unsigned n_frames, audio_sample_t * store_in);
SHOOP_EXPORT void dummy_audio_port_request_data(shoopdaloop_audio_port_t* port, unsigned n_frames);
SHOOP_EXPORT void dummy_audio_enter_controlled_mode(shoop_audio_driver_t *driver);
SHOOP_EXPORT void dummy_audio_enter_automatic_mode(shoop_audio_driver_t *driver);
SHOOP_EXPORT unsigned dummy_audio_is_in_controlled_mode(shoop_audio_driver_t *driver);
SHOOP_EXPORT void dummy_audio_request_controlled_frames(shoop_audio_driver_t *driver, unsigned n_frames);
SHOOP_EXPORT unsigned dummy_audio_n_requested_frames(shoop_audio_driver_t *driver);
SHOOP_EXPORT void dummy_midi_port_queue_data(shoopdaloop_midi_port_t *port, shoop_midi_sequence_t* events);
SHOOP_EXPORT shoop_midi_sequence_t *dummy_midi_port_dequeue_data(shoopdaloop_midi_port_t *port);
SHOOP_EXPORT void dummy_midi_port_request_data(shoopdaloop_midi_port_t* port, unsigned n_frames);
SHOOP_EXPORT void dummy_midi_port_clear_queues(shoopdaloop_midi_port_t* port);
SHOOP_EXPORT void dummy_driver_add_external_mock_port(shoop_audio_driver_t* driver, const char* name, shoop_port_direction_t direction, shoop_port_data_type_t data_type);
SHOOP_EXPORT void dummy_driver_remove_external_mock_port(shoop_audio_driver_t* driver, const char* name);
SHOOP_EXPORT void dummy_driver_remove_all_external_mock_ports(shoop_audio_driver_t* driver);
// Resampling
SHOOP_EXPORT shoop_multichannel_audio_t *resample_audio(shoop_multichannel_audio_t *in, unsigned new_n_frames);