src/rust/backend/src/codegen/libshoopdaloop.rs

extern "C" {
    pub fn destroy_midi_channel(d: *mut shoopdaloop_loop_midi_channel_t);
}
extern "C" {
    pub fn destroy_shoopdaloop_decoupled_midi_port(d: *mut shoopdaloop_decoupled_midi_port_t);
}
extern "C" {
    pub fn destroy_loop_state_info(d: *mut shoop_loop_state_info_t);
}
extern "C" {
    pub fn destroy_fx_chain(d: *mut shoopdaloop_fx_chain_t);
}
extern "C" {
    pub fn destroy_fx_chain_state(d: *mut shoop_fx_chain_state_info_t);
}
extern "C" {
    pub fn destroy_profiling_report(d: *mut shoop_profiling_report_t);
}
extern "C" {
    pub fn destroy_string(s: *const ::std::os::raw::c_char);
}
extern "C" {
    pub fn destroy_port_connections_state(d: *mut shoop_port_connections_state_t);
}
extern "C" {
    pub fn destroy_logger(logger: *mut shoopdaloop_logger_t);
}
extern "C" {
    pub fn destroy_audio_driver_state(state: *mut shoop_audio_driver_state_t);
}
extern "C" {
    pub fn destroy_multichannel_audio(audio: *mut shoop_multichannel_audio_t);
}
extern "C" {
    pub fn destroy_external_port_descriptors(desc: *mut shoop_external_port_descriptors_t);
}
extern "C" {
    pub fn alloc_midi_event(data_bytes: ::std::os::raw::c_uint) -> *mut shoop_midi_event_t;
}
extern "C" {
    pub fn alloc_midi_sequence(n_events: ::std::os::raw::c_uint) -> *mut shoop_midi_sequence_t;
}
extern "C" {
    pub fn alloc_audio_channel_data(
        n_samples: ::std::os::raw::c_uint,
    ) -> *mut shoop_audio_channel_data_t;
}
extern "C" {
    pub fn alloc_multichannel_audio(
        n_channels: ::std::os::raw::c_uint,
        n_frames: ::std::os::raw::c_uint,
    ) -> *mut shoop_multichannel_audio_t;
}
extern "C" {
    pub fn initialize_logging();
}
extern "C" {
    pub fn get_logger(name: *const ::std::os::raw::c_char) -> *mut shoopdaloop_logger_t;
}
extern "C" {
    pub fn set_global_logging_level(level: shoop_log_level_t);
}
extern "C" {
    pub fn set_logger_level_override(logger: *mut shoopdaloop_logger_t, level: shoop_log_level_t);
}
extern "C" {
    pub fn reset_logger_level_override(logger: *mut shoopdaloop_logger_t);
}
extern "C" {
    pub fn shoopdaloop_log(
        logger: *mut shoopdaloop_logger_t,
        level: shoop_log_level_t,
        msg: *const ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn shoopdaloop_should_log(
        logger: *mut shoopdaloop_logger_t,
        level: shoop_log_level_t,
    ) -> ::std::os::raw::c_uint;
}
extern "C" {
    pub fn dummy_audio_port_queue_data(
        port: *mut shoopdaloop_audio_port_t,
        n_frames: ::std::os::raw::c_uint,
        data: *const audio_sample_t,
    );
}
extern "C" {
    pub fn dummy_audio_port_dequeue_data(
        port: *mut shoopdaloop_audio_port_t,
        n_frames: ::std::os::raw::c_uint,
        store_in: *mut audio_sample_t,
    );
}
extern "C" {
    pub fn dummy_audio_port_request_data(
        port: *mut shoopdaloop_audio_port_t,
        n_frames: ::std::os::raw::c_uint,
    );
}
extern "C" {
    pub fn dummy_audio_enter_controlled_mode(driver: *mut shoop_audio_driver_t);
}
extern "C" {
    pub fn dummy_audio_enter_automatic_mode(driver: *mut shoop_audio_driver_t);
}
extern "C" {
    pub fn dummy_audio_is_in_controlled_mode(
        driver: *mut shoop_audio_driver_t,
    ) -> ::std::os::raw::c_uint;
}
extern "C" {
    pub fn dummy_audio_request_controlled_frames(
        driver: *mut shoop_audio_driver_t,
        n_frames: ::std::os::raw::c_uint,
    );
}
extern "C" {
    pub fn dummy_audio_run_requested_frames(driver: *mut shoop_audio_driver_t);
}
extern "C" {
    pub fn dummy_audio_n_requested_frames(
        driver: *mut shoop_audio_driver_t,
    ) -> ::std::os::raw::c_uint;
}
extern "C" {
    pub fn dummy_midi_port_queue_data(
        port: *mut shoopdaloop_midi_port_t,
        events: *mut shoop_midi_sequence_t,
    );
}
extern "C" {
    pub fn dummy_midi_port_dequeue_data(
        port: *mut shoopdaloop_midi_port_t,
    ) -> *mut shoop_midi_sequence_t;
}
extern "C" {
    pub fn dummy_midi_port_request_data(
        port: *mut shoopdaloop_midi_port_t,
        n_frames: ::std::os::raw::c_uint,
    );
}
extern "C" {
    pub fn dummy_midi_port_clear_queues(port: *mut shoopdaloop_midi_port_t);
}
extern "C" {
    pub fn dummy_driver_add_external_mock_port(
        driver: *mut shoop_audio_driver_t,
        name: *const ::std::os::raw::c_char,
        direction: shoop_port_direction_t,
        data_type: shoop_port_data_type_t,
    );
}
extern "C" {
    pub fn dummy_driver_remove_external_mock_port(
        driver: *mut shoop_audio_driver_t,
        name: *const ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn dummy_driver_remove_all_external_mock_ports(driver: *mut shoop_audio_driver_t);
}
extern "C" {
    pub fn resample_audio(
        in_: *mut shoop_multichannel_audio_t,
        new_n_frames: ::std::os::raw::c_uint,
    ) -> *mut shoop_multichannel_audio_t;
}
